--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Tidy Data
+title: Introduction to the Unix Shell
 remote_theme: pmarsceill/just-the-docs
 
 # Footer "Edit this page on GitHub" link text
